[gd_scene load_steps=5 format=3 uid="uid://cveb6qto4drls"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_kx58t"]
[ext_resource type="Theme" uid="uid://c3jr6jsh78yvx" path="res://Theme/ButtonTheme.tres" id="2_a2cll"]
[ext_resource type="StyleBox" uid="uid://dv072j01mh8os" path="res://Theme/HoverTheme.tres" id="3_0tmw0"]
[ext_resource type="AudioStream" uid="uid://djxhv6cspn2ju" path="res://Audio/ButtonHover.wav" id="4_2lnja"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kx58t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_a2cll")
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("3_0tmw0")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("3_0tmw0")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("3_0tmw0")
text = "Quit"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2lnja")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
